# Home-FSLBM

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  notes.md
common/: colormaps.h  colorramp.cpp  colorramp.h  mlCommon.h  mlCoreWin.h  mlCuRunTime.cpp  mlCuRunTime.h  mlDataType.h  mlFluid.h  mlFluidCommon.h  mlFluidParam.h  mlLatticeNode.h  mlLbmCommon.h  mlPhyscialMapping.h  mlTypeDef.h  mlcudaCommon.h  mlpath.h  mlvector.h  mlvertex.h  tph_poisson.h
inc/2D/cpu/: Poisson.cpp  PoissonGenerator.h  mlInit2D.h  mrConstantParamsCpu2D.h  mrFlow2D.h  mrSolver2D.h
inc/2D/gpu/: CCL.cu  CCL.cuh  mrConstantParamsGpu2D.h  mrLbmSolverGpu2D.cu  mrLbmSolverGpu2D.h  mrUtilFuncGpu2D.h  reduction.cuh
inc/3D/cpu/: mlInit3D.h  mrConstantParamsCpu3D.h  mrFlow3D.h  mrSolver3D.h
inc/3D/gpu/: cuda_mat3.hpp  cuda_mat3.inl.hpp  cuda_types3.hpp  gpu_mat3.cu  mrConstantParamsGpu3D.h  mrLbmSolverGpu3D.cu  mrLbmSolverGpu3D.h  mrUtilFuncGpu3D.h  tDCCL.cu  tDCCL.cuh
src/: testMrLBM2D.cpp  testMrLBM3D_bubble.cpp
tmp_deletefiel in common folder/: mlCommon.h  mlCoreWin.h  mlDataType.h  mlFluid.h  mlFluidCommon.h  mlFluidParam.h  mlLatticeNode.h  mlLbmCommon.h  mlPhyscialMapping.h  mlTypeDef.h  mlcudaCommon.h  mlpath.h  mlvector.h  mlvertex.h
